concord_macros/tests/v5/dsl/fail/fail_endpoint_duplicate_response.stderr
error: expected identifier
  --> tests/v5/dsl/fail/fail_endpoint_duplicate_response.rs:10:9
   |
10 |         -> Json<u32>
   |         ^

warning: unused import: `concord_core::prelude::*`
 --> tests/v5/dsl/fail/fail_endpoint_duplicate_response.rs:1:5
  |
1 | use concord_core::prelude::*;
  |     ^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default
